Support PDF files with dvisvgm backend

--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -595,15 +595,20 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_backend_include_eps:n}
-%  The special syntax is relatively clear here: remember we need PostScript
-%  sizes here. (This is the same as the \texttt{dvips} code.)
+% \begin{macro}{\@@_backend_include_eps:n, \@@_backend_include_pdf:n}
+% \begin{macro}{\@@_backend_include:nn}
+%   The special syntax is relatively clear here: remember we need PostScript
+%   sizes here. (This is the same as the \texttt{dvips} code.)
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_include_eps:n #1
+  { @@_backend_include:nn { PSfile } {#1} } 
+\cs_new_protected:Npn \@@_backend_include_pdf:n #1
+  { @@_backend_include:nn { pdffile } {#1} } 
+\cs_new_protected:Npn \@@_backend_include:nn #1#2
   {
     \__kernel_backend_literal:x
       {
-        PSfile = #1 \c_space_tl
+        #1 = #2 \c_space_tl
         llx = \dim_to_decimal_in_bp:n \l_graphics_llx_dim \c_space_tl
         lly = \dim_to_decimal_in_bp:n \l_graphics_lly_dim \c_space_tl
         urx = \dim_to_decimal_in_bp:n \l_graphics_urx_dim \c_space_tl
@@ -611,6 +616,7 @@
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_backend_include_png:n, \@@_backend_include_jpg:n}
