C:/Users/Nililand-Surface/AppData/Local/Programs/Git/Type/Annot missing for dvipdfmx backend

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -1838,7 +1838,7 @@
         width  ~ \dim_eval:n {#1} ~
         height ~ \dim_eval:n {#2} ~
         depth  ~ \dim_eval:n {#3} ~
-        << #4 >>
+        <</Type/Annot #4 >>
       }
   }
 %    \end{macrocode}
