Check if cctab exists / provide INITEX cctab

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -226,7 +226,7 @@
 %   done by using a stack of tables which are not read only, and actually
 %   having them as \enquote{in use} copies.
 %    \begin{macrocode}
-    \cs_new_protected:Npn \cctab_begin:N #1
+    \cs_new_protected:Npn \@@_begin:N #1
       {
         \seq_gpush:Nx \g_@@_stack_seq { \tex_the:D \tex_catcodetable:D }
         \tex_catcodetable:D #1
@@ -295,7 +295,7 @@
           { \@@_gstore:Nnn #1 {##1} { 11 } }
         \@@_gstore:Nnn #1 { 127 } { 15 }
       }
-    \cs_new_protected:Npn \cctab_begin:N #1
+    \cs_new_protected:Npn \@@_begin:N #1
       {
         \int_gadd:Nn \g_@@_stack_int { 2 }
         \int_compare:nNnT \g_@@_stack_int > \c_max_register_int
@@ -356,6 +356,31 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\cctab_begin:N}
+%   Check if a \meta{cctab~var} exists before trying to use it.
+%   Otherwise the code would throw an ``undefined control sequence''.
+%    \begin{macrocode}
+\cs_new_protected:Npn \cctab_begin:N #1
+  {
+    \cctab_if_exist:NTF #1
+      { \__cctab_begin:N #1 }
+      {
+        \__kernel_msg_error:nnx { kernel } { variable-not-defined }
+          { \token_to_str:N #1 }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\cctab_if_exist:N,\cctab_if_exist:c}
+%    \begin{macrocode}
+\prg_new_eq_conditional:NNn \cctab_if_exist:N \cs_if_exist:N
+  { TF , T , F , p }
+\prg_new_eq_conditional:NNn \cctab_if_exist:c \cs_if_exist:c
+  { TF , T , F , p }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\cctab_const:Nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \cctab_const:Nn #1#2
@@ -371,7 +396,6 @@
 %     \c_initex_cctab   ,
 %     \c_code_cctab     ,
 %     \c_document_cctab ,
-%     \c_initex_cctab   ,
 %     \c_other_cctab    ,
 %     \c_str_cctab
 %   }  
@@ -379,6 +403,7 @@
 %   The \texttt{other} and \texttt{string} ones are done by completely
 %   ignoring the existing codes as this makes life a lot less complex.
 %    \begin{macrocode}
+\cctab_new:N \c_initex_cctab
 \cctab_const:Nn \c_code_cctab { }
 \cctab_const:Nn \c_document_cctab
   {
