Change so that David can \\ZZ

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -307,7 +307,7 @@
         \@@_gstore:Nnn #1 { 13 } { 5 }
         \@@_gstore:Nnn #1 { 32 } { 10 }
         \@@_gstore:Nnn #1 { 37 } { 14 }
-        \int_step_inline:nnn { 64 } { 89 }
+        \int_step_inline:nnn { 65 } { 90 }
           { \@@_gstore:Nnn #1 {##1} { 11 } }
         \@@_gstore:Nnn #1 { 92 } { 0 }
         \int_step_inline:nnn { 97 } { 122 }
@@ -411,7 +411,7 @@
   {
     \prg_new_conditional:Npnn \cctab_if_exist:N #1 { TF , T , F , p }
       {
-        \cs_if_exist:NTF
+        \cs_if_exist:NTF #1
           {
             \cs_if_exist:cTF { g_@@_ \int_use:N #1 _cctab }
               { \prg_return_true: }
@@ -421,7 +421,7 @@
       }
     \prg_new_conditional:Npnn \cctab_if_exist:c #1 { TF , T , F , p }
       {
-        \cs_if_exist:cTF
+        \cs_if_exist:cTF {#1}
           {
             \cs_if_exist:cTF { g_@@_ \int_use:c {#1} _cctab }
               { \prg_return_true: }
