Move \prop_(g)set_from_clist:Nn to stable
Also the const version.

--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -110,6 +110,37 @@
 %   \meta{property list_2}.
 % \end{function}
 %
+% \begin{function}[added = 2017-11-28, updated = 2019-08-25]
+%   {
+%     \prop_set_from_keyval:Nn, \prop_set_from_keyval:cn,
+%     \prop_gset_from_keyval:Nn, \prop_gset_from_keyval:cn,
+%   }
+%   \begin{syntax}
+%     \cs{prop_set_from_keyval:Nn} \meta{prop~var}
+%       \{
+%         \meta{key1} |=| \meta{value1} |,|
+%         \meta{key2} |=| \meta{value2} |,| \ldots{}
+%       \}
+%   \end{syntax}
+%   Sets \meta{prop~var} to contain key--value pairs given in the second
+%   argument.  If duplicate keys appear only one of the values is kept.
+% \end{function}
+%
+% \begin{function}[added = 2017-11-28, updated = 2019-08-25]
+%   {\prop_const_from_keyval:Nn, \prop_const_from_keyval:cn}
+%   \begin{syntax}
+%     \cs{prop_const_from_keyval:Nn} \meta{prop~var}
+%       \{
+%         \meta{key1} |=| \meta{value1} |,|
+%         \meta{key2} |=| \meta{value2} |,| \ldots{}
+%       \}
+%   \end{syntax}
+%   Creates a new constant \meta{prop~var} or raises an error if the
+%   name is already taken. The \meta{prop~var} is set globally to
+%   contain key--value pairs given in the second argument.
+%   If duplicate keys appear only one of the values is kept.
+% \end{function}
+%
 % \section{Adding entries to property lists}
 %
 % \begin{function}[updated = 2012-07-09]
